// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConfluenceSearchInput /> matches snapshot when collapsed 1`] = `
<ConfluenceSearchInputBase
  advancedSearchSelected={[MockFunction]}
  debounceTime={0}
  forwardRef={null}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isExpanded={false}
  isLoading={false}
  onNavigate={[MockFunction]}
  onOpen={[Function]}
  searchSessionId="testSessionId"
  value=""
>
  <ProductSearchInput
    actionSubjectId="confluenceAdvancedSearchLink"
    advancedSearchSelected={[MockFunction]}
    advancedSearchURL="some/advanced/search/url?q="
    collapsedPlaceholder="Search"
    debounceTime={0}
    expandedPlaceholder="Search Confluence"
    forwardRef={null}
    isExpanded={false}
    isLoading={false}
    onNavigate={[MockFunction]}
    onOpen={[Function]}
    searchSessionId="testSessionId"
    value=""
  >
    <div
      actionSubjectId="confluenceAdvancedSearchLink"
      advancedSearchSelected={[MockFunction]}
      advancedSearchURL="some/advanced/search/url?q="
      collapsedPlaceholder="Search"
      debounceTime={0}
      expandedPlaceholder="Search Confluence"
      forwardRef={null}
      isExpanded={false}
      isLoading={false}
      onNavigate={[MockFunction]}
      onOpen={[Function]}
      searchSessionId="testSessionId"
      value=""
    />
  </ProductSearchInput>
</ConfluenceSearchInputBase>
`;

exports[`<ConfluenceSearchInput /> matches snapshot when expanded 1`] = `
<ConfluenceSearchInputBase
  advancedSearchSelected={[MockFunction]}
  debounceTime={0}
  forwardRef={null}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isExpanded={true}
  isLoading={false}
  onNavigate={[MockFunction]}
  onOpen={[Function]}
  searchSessionId="testSessionId"
  value=""
>
  <ProductSearchInput
    actionSubjectId="confluenceAdvancedSearchLink"
    advancedSearchSelected={[MockFunction]}
    advancedSearchURL="some/advanced/search/url?q="
    collapsedPlaceholder="Search"
    debounceTime={0}
    expandedPlaceholder="Search Confluence"
    forwardRef={null}
    isExpanded={true}
    isLoading={false}
    onNavigate={[MockFunction]}
    onOpen={[Function]}
    searchSessionId="testSessionId"
    value=""
  >
    <div
      actionSubjectId="confluenceAdvancedSearchLink"
      advancedSearchSelected={[MockFunction]}
      advancedSearchURL="some/advanced/search/url?q="
      collapsedPlaceholder="Search"
      debounceTime={0}
      expandedPlaceholder="Search Confluence"
      forwardRef={null}
      isExpanded={true}
      isLoading={false}
      onNavigate={[MockFunction]}
      onOpen={[Function]}
      searchSessionId="testSessionId"
      value=""
    />
  </ProductSearchInput>
</ConfluenceSearchInputBase>
`;
